fixed ul text-align problem

--- a/materiais/style-tabela.css
+++ b/materiais/style-tabela.css
@@ -26,7 +26,7 @@ h3 {
 }
 
 div#fontypes {
-    background-color: white ;
+    background-color: white;
     margin: auto;
     max-width: 880px;
     padding: 0px 10px 10px 10px;
@@ -124,6 +124,7 @@ div#d {
 }
 ul {
     list-style-position: inside;
+    padding: 0px;
 }
 li::marker {
     content: '➡ ';
